--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -15,3 +15,9 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+#Bluetooth cofiguration settings
+#Increase BT transmitter power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+#Enable beta connection configs
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
